# OpenREALM

./: .gitignore  .gitmodules  .travis.yml  CHANGELOG.md  CMakeLists.txt  README.md  install_deps.sh  install_openrealm_lib.sh  install_travis_deps.sh
modules/: CMakeLists.txt
modules/realm_core/: CMakeLists.txt
modules/realm_core/include/realm_core/: analysis.h  camera.h  camera_settings.h  camera_settings_factory.h  conversions.h  cv_grid_map.h  depthmap.h  enums.h  frame.h  imu_settings.h  plane_fitter.h  point_cloud.h  settings_base.h  sparse_cloud.h  stereo.h  structs.h  timer.h  tree_node.h  utm32.h  wgs84.h  worker_thread_base.h
modules/realm_core/src/: analysis.cpp  camera.cpp  camera_settings_factory.cpp  conversions.cpp  cv_grid_map.cpp  depthmap.cpp  frame.cpp  inpaint.cpp  plane_fitter.cpp  point_cloud.cpp  settings_base.cpp  sparse_cloud.cpp  stereo.cpp  timer.cpp  worker_thread_base.cpp
modules/realm_core/test/: conversion_test.cpp  cvgridmap_test.cpp  depthmap_test.cpp  frame_test.cpp  pinhole_test.cpp  plane_fitter_test.cpp  settings_test.cpp  stereo_test.cpp  test_helper.cpp  test_helper.h  test_realm_core.cpp  worker_thread_test.cpp
modules/realm_densifier/realm_densifier_base/: CMakeLists.txt
modules/realm_io/: CMakeLists.txt
modules/realm_io/cmake/: LibFindMacros.cmake
modules/realm_io/src/: cv_export.cpp  cv_import.cpp  exif_export.cpp  exif_import.cpp  gdal_continuous_writer.cpp  gis_export.cpp  mvs_export.cpp  pcl_export.cpp  realm_export.cpp  realm_import.cpp  utilities.cpp
modules/realm_io/test/: cv_io_test.cpp  mvs_io_test.cpp  realm_io_test.cpp  test_realm_io.cpp
modules/realm_ortho/: CMakeLists.txt
modules/realm_ortho/src/: delaunay_2d.cpp  dsm.cpp  gdal_warper.cpp  map_tiler.cpp  rectification.cpp  tile.cpp  tile_cache.cpp
modules/realm_stages/: CMakeLists.txt
modules/realm_stages/src/: conversions.cpp  densification.cpp  mosaicing.cpp  ortho_rectification.cpp  pose_estimation.cpp  stage_base.cpp  stage_settings_factory.cpp  surface_generation.cpp  tileing.cpp
modules/realm_vslam/realm_vslam_base/: CMakeLists.txt  README.md
realm_core/: CMakeLists.txt  README.md  package.xml
realm_core/cmake/: FindEigen3.cmake
realm_core/include/realm_common/: timer.h
realm_core/include/realm_core/: camera.h  camera_settings.h  camera_settings_factory.h  consts.h  cv_grid_map.h  frame.h  mat_overwrite.h  se3_solver.h  settings_base.h  sim2_solver.h  stereo.h  structs.h  timer.h  worker_thread_base.h
realm_core/include/realm_cv/: analysis.h  inpaint.h  mat_overwrite.h  stereo.h
realm_core/include/realm_gis/: conversions.h
realm_core/include/realm_maths/: plane_fitter.h  se3_solver.h  sim2_solver.h  solver_IF.h
realm_core/include/realm_types/: camera.h  camera_settings.h  camera_settings_factory.h  consts.h  cv_grid_map.h  enums.h  frame.h  settings_base.h  structs.h  utm32.h  worker_thread_base.h
realm_core/src/realm_common/: timer.cpp
realm_core/src/realm_core_lib/: camera.cpp  camera_settings_factory.cpp  cv_grid_map.cpp  frame.cpp  inpaint.cpp  mat_overwrite.cpp  plane_fitter.cpp  se3_solver.cpp  settings_base.cpp  sim2_solver.cpp  stereo.cpp  worker_thread_base.cpp
realm_core/src/realm_cv_lib/: analysis.cpp  inpaint.cpp  mat_overwrite.cpp  stereo.cpp
realm_core/src/realm_gis_lib/: conversions.cpp
realm_core/src/realm_maths_lib/: plane_fitter.cpp  se3_solver.cpp  sim2_solver.cpp
realm_core/src/realm_types_lib/: camera.cpp  camera_settings_factory.cpp  cv_grid_map.cpp  frame.cpp  settings_base.cpp  worker_thread_base.cpp
realm_core/test/: cvgridmap_test.cpp  frame_test.cpp  pinhole_test.cpp  settings_test.cpp  stereo_test.cpp  test_helper.cpp  test_helper.h  worker_thread_test.cpp
realm_densifier/realm_densifier_base/: CMakeLists.txt  package.xml
realm_densifier/realm_densifier_impl/psl/: CMakeLists.txt  package.xml
realm_io/: CMakeLists.txt  package.xml
realm_io/cmake/: FindExiv2.cmake
realm_io/include/realm_io/: cv_export.h  exif_export.h  exif_import.h  gis_export.h  pcl_export.h  realm_export.h  realm_import.h  utilities.h
realm_io/src/realm_io_lib/: cv_export.cpp  exif_export.cpp  exif_import.cpp  gis_export.cpp  pcl_export.cpp  realm_export.cpp  realm_import.cpp  utilities.cpp
realm_msgs/: CMakeLists.txt  package.xml
realm_msgs/msg/: CvGridMap.msg  Frame.msg  Georeference.msg  GroundImageCompressed.msg  Pinhole.msg
realm_msgs/srv/: ParameterChange.srv
realm_ortho/: CMakeLists.txt  package.xml
realm_ortho/include/realm_ortho/: delaunay_2d.h  dsm.h  nanoflann.h  rectification.h
realm_ortho/src/realm_ortho_lib/: delaunay_2d.cpp  dsm.cpp  rectification.cpp
realm_ros/: CMakeLists.txt  README.md  package.xml
realm_ros/include/realm_ros/: conversions.h  grabber_exiv2_node.h  grabber_ros_node.h  stage_node.h
realm_ros/launch/: alexa.launch  alexa_coop.launch  alexa_gnss.launch  alexa_mm.launch  alexa_noreco.launch  alexa_reco.launch  alexa_reco_ros.launch  dji.launch  manta.launch
realm_ros/rviz/: realm.rviz  realm_coop.rviz  realm_debug.rviz  realm_test.rviz
realm_ros/src/: grabber_exiv2_node_main.cpp  grabber_ros_node_main.cpp  stage_node_main.cpp
realm_ros/src/realm_ros_lib/: conversions.cpp  grabber_exiv2_node.cpp  grabber_ros_node.cpp  stage_node.cpp
realm_ros/tools/: bin_vocabulary  bin_vocabulary.cc
realm_rviz_plugin/: CMakeLists.txt  Readme.md  package.xml  plugin_description.xml
realm_rviz_plugin/src/: ground_image_display.cpp  ground_image_display.h  ground_image_test_publisher.cpp
realm_stages/: CMakeLists.txt  package.xml
realm_stages/include/realm_stages/: conversions.h  densification.h  mosaicing.h  ortho_rectification.h  pose_estimation.h  stage_base.h  stage_settings.h  stage_settings_factory.h  surface_generation.h
realm_stages/src/realm_stages_lib/: conversions.cpp  densification.cpp  mosaicing.cpp  ortho_rectification.cpp  pose_estimation.cpp  stage_base.cpp  stage_settings_factory.cpp  surface_generation.cpp
realm_vslam/realm_vslam_base/: CMakeLists.txt  package.xml
realm_vslam/realm_vslam_impl/orb_slam_2/: CMakeLists.txt  package.xml
(+275 files in other folders)
