<package format="2">
    <name>realm_core</name>
    <version>1.0.0</version>
    <description>The realm_core package</description>

    <author>Alexander Kern</author>
    <maintainer email="a.kern@tu-bs.de">laxn_pander</maintainer>

    <license>GPL</license>

    <buildtool_depend>catkin</buildtool_depend>

    <build_depend>cmake_modules</build_depend>

    <exec_depend>cmake_modules</exec_depend>

    <!-- The export tag contains other, unspecified, tags -->
    <export>
        <cpp cflags="-I${prefix}/include" lflags="-L${prefix}/lib -lrealm_core"/>
    </export>
</package>
