<?xml version="1.0"?>
<package>
    <name>realm_io</name>
    <version>1.0.0</version>
    <description>The realm_io package</description>

    <maintainer email="al.kern@tu-bs.de">laxn_pander</maintainer>

    <license>TODO</license>

    <buildtool_depend>catkin</buildtool_depend>

    <build_depend>realm_core</build_depend>

    <run_depend>realm_core</run_depend>

    <!-- The export tag contains other, unspecified, tags -->
    <export>
        <cpp cflags="-I${prefix}/include" lflags="-L${prefix}/lib -lrealm_io"/>
    </export>
</package>
