<package format="2">
    <name>realm_io</name>
    <version>1.0.0</version>
    <description>The realm_io package</description>

    <author>Alexander Kern</author>
    <maintainer email="al.kern@tu-bs.de">laxn_pander</maintainer>

    <license>GPL</license>

    <buildtool_depend>catkin</buildtool_depend>

    <build_depend>realm_core</build_depend>
    <build_depend>cmake_modules</build_depend>

    <exec_depend>realm_core</exec_depend>
    <exec_depend>OpenCV</exec_depend>
    <exec_depend>cmake_modules</exec_depend>
    <exec_depend>Exiv2</exec_depend>
    <exec_depend>GDAL</exec_depend>
    <exec_depend>PCL</exec_depend>
    <exec_depend>Boost</exec_depend>

    <!-- The export tag contains other, unspecified, tags -->
    <export>
        <cpp cflags="-I${prefix}/include" lflags="-L${prefix}/lib -lrealm_io"/>
    </export>
</package>
