<?xml version="1.0"?>
<package>
  <name>realm_msgs</name>
  <version>1.0.0</version>
  <description>The realm_msg package contains messages for the real-time aerial localization and mapping framework (REALM)</description>
  <maintainer email="al.kern@tu-bs.de">Alexander Kern</maintainer>
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>roscpp</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>message_generation</build_depend>

  <run_depend>roscpp</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>geometry_msgs</run_depend>
  <run_depend>sensor_msgs</run_depend>
  <run_depend>message_runtime</run_depend>
</package>


