<package format="2">
  <name>realm_msgs</name>
  <version>1.0.0</version>
  <description>The realm_msg package contains messages for the real-time aerial localization and mapping framework (REALM)</description>

  <author>Alexander Kern</author>
  <maintainer email="al.kern@tu-bs.de">Alexander Kern</maintainer>

  <license>GPL</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>roscpp</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>message_generation</build_depend>

  <exec_depend>roscpp</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>message_runtime</exec_depend>
</package>


