<?xml version="1.0"?>
<package>
  <name>realm_ros</name>
  <version>1.0.0</version>
  <description>The realm_ros package</description>

  <maintainer email="al.kern@tu-bs.de">laxn_pander</maintainer>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>roscpp</build_depend>
  <build_depend>roslib</build_depend>
  <build_depend>pcl_ros</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>nav_msgs</build_depend>
  <build_depend>geodesy</build_depend>
  <build_depend>cv_bridge</build_depend>
  <build_depend>tf</build_depend>
  <build_depend>geographic_msgs</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>realm_msgs</build_depend>
  <build_depend>realm_core</build_depend>
  <build_depend>realm_io</build_depend>
  <build_depend>realm_stages</build_depend>

  <run_depend>roscpp</run_depend>
  <run_depend>roslib</run_depend>
  <run_depend>pcl_ros</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>nav_msgs</run_depend>
  <run_depend>geodesy</run_depend>
  <run_depend>cv_bridge</run_depend>
  <run_depend>tf</run_depend>
  <run_depend>geographic_msgs</run_depend>
  <run_depend>sensor_msgs</run_depend>
  <run_depend>custom_msgs</run_depend>
  <run_depend>realm_msgs</run_depend>
  <run_depend>realm_core</run_depend>
  <run_depend>realm_io</run_depend>
  <run_depend>realm_stages</run_depend>

  <!-- The export tag contains other, unspecified, tags -->
 <export>
   <cpp cflags="-I${prefix}/include" lflags="-L${prefix}/lib -lrealm_ros"/>
 </export>

</package>
